fixed update
