# grpc-gateway/doc/swagger/gateway-with-imgs.swagger.json
@@ -256,11 +256,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "scheduleId": {
-                  "type": "integer",
-                  "format": "int64",
-                  "example": "1"
-                },
                 "adminUsername": {
                   "type": "string",
                   "example": "admin"
